Basic draw functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="edu.stanford.ee368.flowchargenerator">
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -18,9 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CameraActivity"
-            android:screenOrientation="landscape">
-        </activity>
+        <activity
+            android:name=".CameraActivity"
+            android:screenOrientation="landscape"></activity>
+        <activity android:name=".Galleryctivity"></activity>
     </application>
 
 </manifest>
